--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,7 +8,6 @@
     "dev": "nodemon dist/index.ts",
     "start": "nodemon dist/index.js",
     "typescript": "tsc --watch"
-
   },
   "keywords": [],
   "author": "",
@@ -23,6 +22,7 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "nodemon": "^3.1.9",
     "typescript": "^5.7.3"
   }
