--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "nodemon": "^3.1.9",
     "typescript": "^5.7.3"
   }
